# remote-egui

./: Cargo.toml  README.md  index.html  justfile
.cargo/: config.toml
.github/workflows/: pages.yml
apps/editor/: Cargo.toml
assets/: manifest.json  sw.js
crates/broker/: Cargo.toml
crates/broker/src/: broker.rs  client.rs  lib.rs
crates/code_editor/: Cargo.toml
crates/code_editor/src/: editor.rs  lib.rs  syntax_highlighting.rs
crates/editor/: Cargo.toml  index.html  rust-toolchain
crates/editor/assets/: manifest.json  sw.js
crates/editor/src/: app.rs  filesystem.rs  launch.rs  lib.rs  main.rs  notification.rs  pane.rs  project.rs  rpc.rs  tree.rs
crates/editor/src/launch/: native.rs  wasm.rs
crates/editor/src/launch/native/: bundle.rs  cli.rs  server.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: client.rs  contract.rs  executor.rs  lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  widgets.rs
crates/widget/: Cargo.toml
crates/widget/src/: contract.rs  filesystem.rs  lib.rs
crates/widgets/connection/: Cargo.toml
crates/widgets/connection/src/: client.rs  connect.rs  lib.rs
crates/widgets/template/: Cargo.toml
crates/widgets/template/src/: lib.rs  widget.rs
server/: Cargo.toml
server/src/: main.rs
src/: app.rs  frontend.rs  lib.rs  main.rs
