[package]
name = "editor"
version = "0.1.0"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
edition = "2021"

# Update this after 1.72.0 opaque type cycle-detection regression is fixed
#
# See here for info:
# https://github.com/rust-lang/rust/issues/115188#issuecomment-1692449553
rust-version = "1.71.0"

[dependencies]
bincode = "1.3.3"
broker = { path = "../../crates/broker" }
editor_core = { path = "../../crates/editor" }
dirs = "5.0.1"
egui = "0.23.0"
enum2pos = "0.1.1"
enum2str = "0.1.9"
enum2egui = "0.1.7"
enum2contract = "0.1.6"
postcard = { version = "1.0.4", features = ["alloc"] }
eframe = { version = "0.23.0", features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui_tiles = "0.3.1"
egui-toast = { git = "https://github.com/urholaukkarinen/egui-toast", rev = "c7ec7a40d925fc818aa600b8f97f2fc1f137cba5" }
ewebsock = { version = "0.3.0", features = ["tls"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.94", default-features = false, features = [
    "alloc",
] }
ron = "0.8.0"
ui = { path = "../../crates/ui" }
rfd = "0.12.0"
rpc = { path = "../../crates/rpc" }
uuid = { version = "1.4.1", features = ["v4", "js"] }
futures = "0.3.28"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
futures = "0.3.28"
futures-util = "0.3.28"
log = "0.4.20"
mime_guess = "2.0.4"
rust-embed = "8.0.0"
structopt = "0.3.26"
tokio = { version = "1.31.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
warp = "0.3.5"
webbrowser = "0.8.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[features]
default = []
bundled = []
