[package]
name = "editor_core"
version = "0.1.0"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
edition = "2021"

[dependencies]
bincode = "1.3.3"
broker = { path = "../../crates/broker" }
dirs = "5.0.1"
egui = "0.24.1"
enum2pos = "0.1.1"
enum2str = "0.1.10"
enum2egui = "0.1.8"
enum2contract = "0.1.6"
postcard = { version = "1.0.8", features = ["alloc"] }
eframe = { version = "0.24.1", features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui_tiles = "0.4.0"
egui-toast = { git = "https://github.com/urholaukkarinen/egui-toast", rev = "c7ec7a40d925fc818aa600b8f97f2fc1f137cba5" }
ewebsock = { version = "0.4.0", features = ["tls"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.110", default-features = false, features = [
    "alloc",
] }
ron = "0.8.1"
ui = { path = "../../crates/ui" }
rfd = "0.12.1"
rpc = { path = "../../crates/rpc" }
uuid = { version = "1.6.1", features = ["v4", "js"] }
futures = "0.3.30"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
futures = "0.3.30"
futures-util = "0.3.30"
log = "0.4.20"
mime_guess = "2.0.4"
rust-embed = "8.2.0"
structopt = "0.3.26"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
warp = "0.3.6"
webbrowser = "0.8.12"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[features]
default = []
bundled = []
