[package]
name = "widget"
version = "0.1.0"
edition = "2021"

[dependencies]
broker = { path = "../broker" }
egui = "0.24.1"
enum2contract = "0.1.6"
enum2str = "0.1.10"
log = "0.4"
postcard = { version = "1.0.8", features = ["alloc"] }
rpc = { path = "../rpc", default-features = false, features = ["contract"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.110", default-features = false, features = [
    "alloc",
] }

enum2egui = { version = "0.1.8", optional = true }

[features]
default = ["gui"]
gui = ["enum2egui", "rpc/gui"]
